@@ -459,7 +459,7 @@ public class ContentletLoader implements DotLoader {
 
                 // Initialize variables
                 String catInodes = "";
-                Set<Category> categoryList = new HashSet<Category>();
+                Set<Category> categoryList = new HashSet<>();
                 List<Category> categoryTree = categoryAPI.getAllChildren(category, systemUser, false);
 
                 if (selectedCategories.size() > 0 && categoryTree != null) {
@@ -527,7 +527,7 @@ public class ContentletLoader implements DotLoader {
 
         // get the contentlet categories to make a list
         String categories = "";
-        Set<Category> categoryList = new HashSet<Category>(categoryAPI.getParents(content, systemUser, false));
+        Set<Category> categoryList = new HashSet<>(categoryAPI.getParents(content, systemUser, false));
         if (categoryList != null && categoryList.size() > 0) {
             StringBuilder catbuilder = new StringBuilder();
             Iterator<Category> it = categoryList.iterator();
@@ -633,7 +633,7 @@ public class ContentletLoader implements DotLoader {
     public InputStream writeObject(final VelocityResourceKey key)
             throws DotStateException, DotDataException, DotSecurityException {
 
-        long language = new Long(key.language);
+        long language = Long.valueOf(key.language);
         final RenderContext renderContext = WebAPILocator.getVariantWebAPI()
                 .getRenderContext(language, key.id1, key.mode, APILocator.systemUser());
 
